# TalkTalk

./: CMakeLists.txt
client/: AbstractConsumer.cpp  AbstractConsumer.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  ServerConnection.cpp  ServerConnection.h  main.cpp  main_widgetsgui.cpp
client/core/: AbstractConsumer.cpp  AbstractConsumer.h  ChannelModel.cpp  ChannelModel.h  ChannelsModel.cpp  ChannelsModel.h  IrcServersModel.cpp  IrcServersModel.h  MonitorModel.cpp  ServerConnection.cpp  SyncedList.cpp  UsersModel.cpp  UsersModel.h
client/widgetsgui/: ChatView.cpp  ChatView.h  MainWindow.cpp  MainWindow.h  MainWindow.ui
client/widgetsgui/pages/: IRCServersPage.cpp  IRCServersPage.h  IRCServersPage.ui
cmake/: FindLibCommuni.cmake
common/: BaseConfigObject.cpp  BaseConfigObject.h  FileSystem.cpp  FileSystem.h  Json.cpp  Json.h  TcpUtils.cpp
core/: AbstractClientConnection.cpp  AbstractClientConnection.h  ConnectionManager.cpp  IrcClientConnection.cpp  IrcClientConnection.h  IrcMessageFormatter.cpp  IrcMessageFormatter.h  Plugin.h  SyncableList.cpp  SyncableList.h  TcpClientConnection.cpp  TcpClientConnection.h  TcpServer.cpp  TcpServer.h  WebSocketClientConnection.cpp  WebSocketClientConnection.h  WebSocketServer.cpp  WebSocketServer.h  main.cpp
core/backlog/: BacklogClientConnection.cpp  BacklogClientConnection.h  BacklogPlugin.cpp  BacklogPlugin.h  SqlHelpers.cpp  SqlHelpers.h
core/irc/: IrcClientConnection.cpp  IrcClientConnection.h  IrcMessageFormatter.cpp  IrcMessageFormatter.h  IrcPlugin.cpp  IrcPlugin.h  IrcServer.cpp  IrcServer.h
core/tcp/: TcpPlugin.cpp  TcpPlugin.h
core/websockets/: WebSocketsPlugin.cpp  WebSocketsPlugin.h
